[tool.poetry]
name = "tuya_graphing"
version = "0.1.0"
description = ""
authors = ["Elliana <me@mause.me>"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.9"
tinytuya = "^1.3.1"
pydantic = "^1.9.0"
tuya-connector-python = "^0.1.2"
plotly = "^5.6.0"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.3"
black = {version = "^22.1.0", allow-prereleases = true}
pre-commit = "^2.17.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
