[tool.poetry]
name = "tuya_graphing"
version = "0.1.0"
description = ""
authors = ["Elliana <me@mause.me>"]
package-mode = false

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true

[tool.poetry.dependencies]
python = "^3.10"
tinytuya = "^1.3.1"
pydantic = "^1.9.0"
tuya-connector-python = "^0.1.2"
plotly = "^5.6.0"
pandas = "^1.4.1"
rich = "^11.2.0"
pytemperature = "^1.1"

[tool.poetry.group.dev.dependencies]
pdbpp = {git = "https://github.com/pdbpp/pdbpp"}
black = {version = "^22.1.0", allow-prereleases = true}
pre-commit = "^2.17.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
